--- a/redis/templates/master/pvc.yaml
+++ b/redis/templates/master/pvc.yaml
@@ -3,8 +3,12 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ printf "redis-data-%s-master" (include "common.names.fullname" .) }}
+  namespace: development
   labels: {{- include "common.labels.matchLabels" . | nindent 4 }}
     app.kubernetes.io/component: master
+    {{- if .Values.master.persistence.labels }}
+    {{- toYaml .Values.master.persistence.labels | nindent 4 }}
+    {{- end }}
   {{- if .Values.master.persistence.annotations }}
   annotations: {{- toYaml .Values.master.persistence.annotations | nindent 4 }}
   {{- end }}
@@ -22,5 +26,5 @@ spec:
   {{- if .Values.master.persistence.dataSource }}
   dataSource: {{- include "common.tplvalues.render" (dict "value" .Values.master.persistence.dataSource "context" $) | nindent 4 }}
   {{- end }}
-  {{- include "common.storage.class" (dict "persistence" .Values.master.persistence "global" .Values.global) | nindent 4 }}
+  {{- include "common.storage.class" (dict "persistence" .Values.master.persistence "global" .Values.global) | nindent 2 }}
 {{- end }}
