--- a/redis/templates/role.yaml
+++ b/redis/templates/role.yaml
@@ -3,7 +3,7 @@ apiVersion: {{ include "common.capabilities.rbac.apiVersion" . }}
 kind: Role
 metadata:
   name: {{ template "common.names.fullname" . }}
-  namespace: {{ .Release.Namespace | quote }}
+  namespace: development
   labels: {{- include "common.labels.standard" . | nindent 4 }}
     {{- if .Values.commonLabels }}
     {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
@@ -20,7 +20,7 @@ rules:
       - 'podsecuritypolicies'
     verbs:
       - 'use'
-    resourceNames: [{{ template "common.names.fullname" . }}]
+    resourceNames: [{{ printf "%s-master" (include "common.names.fullname" .) }}]
   {{- end }}
   {{- if .Values.rbac.rules }}
   {{- include "common.tplvalues.render" ( dict "value" .Values.rbac.rules "context" $ ) | nindent 2 }}
