--- a/redis/templates/sentinel/node-services.yaml
+++ b/redis/templates/sentinel/node-services.yaml
@@ -2,7 +2,7 @@
 
 {{- range $i := until (int .Values.replica.replicaCount) }}
 
-{{ $portsmap := (lookup "v1" "ConfigMap" $.Release.Namespace (printf "%s-%s" ( include "common.names.fullname" $ ) "ports-configmap")).data }}
+{{ $portsmap := (lookup "v1" "ConfigMap" $.development (printf "%s-%s" ( include "common.names.fullname" $ ) "ports-configmap")).data }}
 
 {{ $sentinelport := 0}}
 {{ $redisport := 0}}
@@ -11,13 +11,11 @@
 {{ $redisport = index $portsmap (printf "%s-node-%s-%s" (include "common.names.fullname" $) (toString $i) "redis") }}
 {{- else }}
 {{- end }}
-
----
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "common.names.fullname" $ }}-node-{{ $i }}
-  namespace: {{ $.Release.Namespace | quote }}
+  namespace: development
   labels: {{- include "common.labels.standard" $ | nindent 4 }}
     app.kubernetes.io/component: node
     {{- if $.Values.commonLabels }}
@@ -67,5 +65,6 @@ spec:
     targetPort: {{ $.Values.replica.containerPorts.redis }}
   selector:
     statefulset.kubernetes.io/pod-name: {{ template "common.names.fullname" $ }}-node-{{ $i }}
+---
 {{- end }}
 {{- end }}
