--- a/arangodb-ingress-proxy/templates/service.yaml
+++ b/arangodb-ingress-proxy/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: {{ template "arangodb-ingress-proxy.name" . }}
+    name: arangodb-ingress-proxy
     namespace: development
     labels:
-        app.kubernetes.io/name: {{ template "arangodb-ingress-proxy.name" . }}
+        app.kubernetes.io/name: arangodb-ingress-proxy
         helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/instance: {{ .Release.Name }}
@@ -12,11 +12,12 @@ metadata:
 spec:
     ports:
         - name: server
-          port: 8529
           protocol: TCP
-          targetPort: 8529
+          port: 443
+          targetPort: 443
+          nodePort: 32369
     selector:
-        app.kubernetes.io/name: {{ template "arangodb-ingress-proxy.name" . }}
+        app.kubernetes.io/name: arangodb-ingress-proxy
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/instance: {{ .Release.Name }}
         release: {{ .Release.Name }}
