--- a/values.yaml
+++ b/values.yaml
@@ -72,3 +72,9 @@ vault:
   image:
     repository: charts/vault-0.23.0.tgz
     tag: 1.0.0
+    
+nuxeo:
+  enabled: true
+  image:
+    repository: charts/nuxeo-1.0.0.tgz
+    tag: 1.0.0
