--- a/Chart.yaml
+++ b/Chart.yaml
@@ -14,6 +14,7 @@ keywords:
   - openfaas
   - redis 
   - vault
+  - nuxeo
 home: https://github.com/frmscoe/helm
 maintainers:
   - name: kyle
@@ -53,3 +54,6 @@ dependencies:
   - name: vault
     version: 0.23.0
     repository: charts/vault-0.23.0.tgz
+  - name: nuxeo
+    version: 1.0.0
+    repository: charts/nuxeo-1.0.0.tgz
