--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,7 +3,7 @@ entries:
   apm-server:
   - apiVersion: v1
     appVersion: 8.5.1
-    created: "2023-04-18T12:58:09.8100663+02:00"
+    created: "2023-05-19T08:27:03.9266783+02:00"
     description: Official Elastic helm chart for Elastic APM Server
     digest: 3401a23adaef389193fd07df2be4bb56f70c53ba31a88f56d8d7b45f98d1bc06
     home: https://github.com/elastic/helm-charts
@@ -19,7 +19,7 @@ entries:
     version: 8.5.1
   arangodb:
   - apiVersion: v2
-    created: "2023-04-18T12:58:09.8150546+02:00"
+    created: "2023-05-19T08:27:03.9271972+02:00"
     digest: 82b9994a25b6833e79ddf04c0573cd5146be1685bd2bb9805e93a071643bef1a
     name: arangodb
     urls:
@@ -27,7 +27,7 @@ entries:
     version: 1.0.0
   arangodb-ingress-proxy:
   - apiVersion: v1
-    created: "2023-04-18T12:58:09.8196209+02:00"
+    created: "2023-05-19T08:27:03.9277168+02:00"
     description: ArangoDB Ingress Proxy
     digest: 0576833e01d32f063f415c8a29f7fd370bc7853fe0d2d22ddbec071937702187
     name: arangodb-ingress-proxy
@@ -37,7 +37,7 @@ entries:
   elasticsearch:
   - apiVersion: v1
     appVersion: 8.5.1
-    created: "2023-04-18T12:58:09.8335594+02:00"
+    created: "2023-05-19T08:27:03.9297837+02:00"
     description: Official Elastic helm chart for Elasticsearch
     digest: 89bc07d7b2de34e419c2d755274ad05916728f6d351ba8fffb9754261e17295d
     home: https://github.com/elastic/helm-charts
@@ -53,10 +53,10 @@ entries:
     version: 8.5.1
   infra-chart:
   - apiVersion: v2
-    created: "2023-04-18T12:58:09.8399144+02:00"
+    created: "2023-05-19T08:27:03.9309578+02:00"
     description: A Helm chart for installing infrastructure components for the FRMS
       system.
-    digest: 5206af8719e9835bf4d72ee355c675c60c78f0ecc93a9df1abf279c9676dcfc8
+    digest: 93eaa2d38517292dafa20cbbe7e18d49e5d24fc9e809a0f2216a0c08b2ebe83b
     name: infra-chart
     type: application
     urls:
@@ -65,7 +65,7 @@ entries:
   jenkins:
   - apiVersion: v2
     appVersion: 2.387.1
-    created: "2023-04-18T12:58:09.849981+02:00"
+    created: "2023-05-19T08:27:03.934219+02:00"
     dependencies:
     - name: common
       repository: https://charts.bitnami.com/bitnami
@@ -100,7 +100,7 @@ entries:
       licenses: Apache-2.0
     apiVersion: v2
     appVersion: 21.0.2
-    created: "2023-04-18T12:58:09.8646911+02:00"
+    created: "2023-05-19T08:27:03.942871+02:00"
     dependencies:
     - condition: postgresql.enabled
       name: postgresql
@@ -133,7 +133,7 @@ entries:
   kibana:
   - apiVersion: v1
     appVersion: 8.5.1
-    created: "2023-04-18T12:58:09.8716902+02:00"
+    created: "2023-05-19T08:27:03.9444154+02:00"
     description: Official Elastic helm chart for Kibana
     digest: 1b92a833a6a6f2f69a255779a01ce6e334fa4b1d950403bf13d13cafc2078a73
     home: https://github.com/elastic/helm-charts
@@ -150,7 +150,7 @@ entries:
   logstash:
   - apiVersion: v1
     appVersion: 8.5.1
-    created: "2023-04-18T12:58:09.8777243+02:00"
+    created: "2023-05-19T08:27:03.9454448+02:00"
     description: Official Elastic helm chart for Logstash
     digest: f0d8a9a5f2b3111afd85289be34afbdf175e2076e2c49f4e4c158bf4fb419f22
     home: https://github.com/elastic/helm-charts
@@ -170,7 +170,7 @@ entries:
       licenses: Apache-2.0
     apiVersion: v2
     appVersion: 1.6.4
-    created: "2023-04-18T12:58:09.8857251+02:00"
+    created: "2023-05-19T08:27:03.9480342+02:00"
     dependencies:
     - name: common
       repository: https://charts.bitnami.com/bitnami
@@ -202,7 +202,7 @@ entries:
     version: 9.3.32
   nuxeo:
   - apiVersion: v2
-    created: "2023-04-18T12:58:09.8857251+02:00"
+    created: "2023-05-19T08:27:03.9490549+02:00"
     digest: 48183230baf781eae7901aa27e8ff88fd0749269887312b0053377700912688d
     name: nuxeo
     urls:
@@ -210,7 +210,7 @@ entries:
     version: 1.0.0
   openfaas:
   - apiVersion: v2
-    created: "2023-04-18T12:58:09.8937247+02:00"
+    created: "2023-05-19T08:27:03.9529039+02:00"
     description: OpenFaaS - Serverless Functions Made Simple
     digest: 59e49bcc44a48f1a95874a6c6ad721d94c4465ae7667182d656bd2f008308259
     home: https://www.openfaas.com
@@ -241,7 +241,7 @@ entries:
       licenses: Apache-2.0
     apiVersion: v2
     appVersion: 7.0.9
-    created: "2023-04-18T12:58:09.9076904+02:00"
+    created: "2023-05-19T08:27:03.9586724+02:00"
     dependencies:
     - name: common
       repository: https://charts.bitnami.com/bitnami
@@ -272,7 +272,7 @@ entries:
       charts.openshift.io/name: HashiCorp Vault
     apiVersion: v2
     appVersion: 1.13.1
-    created: "2023-04-18T12:58:09.9157252+02:00"
+    created: "2023-05-19T08:27:03.962205+02:00"
     description: Official HashiCorp Vault Chart
     digest: 16828261422256465670d504b31ec71f1ba59bc6a922413632c7ff54eb4b03e5
     home: https://www.vaultproject.io
@@ -295,4 +295,4 @@ entries:
     urls:
     - charts/vault-0.24.0.tgz
     version: 0.24.0
-generated: "2023-04-18T12:58:09.8035297+02:00"
+generated: "2023-05-19T08:27:03.925641+02:00"
