feat: Adding Nats to chart , with compressed files and updated index

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -57,3 +57,6 @@ dependencies:
   - name: nuxeo
     version: 1.0.0
     repository: charts/nuxeo-1.0.0.tgz
+  - name: nats
+    version: 0.19.16
+    repository: charts/nats-0.19.16.tgz
